--- a/task2/Makefile
+++ b/task2/Makefile
@@ -2,6 +2,7 @@ TASK_DIR=`go env GOPATH`/src/github.com/sokks/gossip/task2
 LOG_DIR=$(TASK_DIR)/log
 DATA_DIR=$(TASK_DIR)/data
 task2:
+	go clean github.com/sokks/gossip/task2
 	go install github.com/sokks/gossip/task2
 	mkdir -p $(LOG_DIR)
 	mkdir -p $(DATA_DIR)
