--- a/task2/Makefile
+++ b/task2/Makefile
@@ -8,4 +8,4 @@ task2:
 	mkdir -p $(DATA_DIR)
 	`go env GOPATH`/bin/task2 $(LOG_DIR) $(DATA_DIR)
 draw:
-	`which python3` $(TASK_DIR)/draw_plot.py $(DATA_DIR)
+	`which python` $(TASK_DIR)/draw_plot.py $(DATA_DIR)
